# sequentialDM

./: CMakeLists.txt  all_rules.txt  all_rules1.txt  main.cpp  main.h  seqActivities.txt  tb_battle_info.txt  test_data.txt
FileService/: readFromFile.cpp  readFromFile.h  saveToFile.cpp  saveToFile.h
Mining/: doMining.cpp  doMining.h
Model/: Complete.h  CompleteHead.cpp  CompleteHead.h  CompleteNode.cpp  CompleteNode.h  DataHead.cpp  DataHead.h  Transaction.h  connect.h  node.h  seqJob.cpp  seqJob.h
MyQueue/: MyQueue.h
ToolKit/: global.cpp  global.h
